    - better semantic/colorizer support for versions LDC,CRuntime_Microsoft,CRuntime_DigitalMars and MinGW
    - bugzilla 15345: syntax highlighting wrong if asm followed by function attributes
  * configuration dialogs:
    - fixed small fonts in VS2015
    - better work with resizeable windows
    - scale some controls vertically if there is space
    - added browse buttons to path settings
  * some improvements to the C++ to D conversion wizard:
    - don't stop conversion after an unmatched } (this also caused other messages to not be displayed)
    - added support for sizeof without parenthesis
    - allow namespace scope in type names
    - allow virtual destructors
    - skip throw function specification
    - fix order of identifiers if "#define A B" is converted to an alias
  * miscellaneous
    - replaced ancient pkgcmd.ctc with pkgcmd.vsct that's buildable with newer VS SDKs
    - added icons to some commands
    - search pane did not save its last state, only when switching between file and symbol search
    - dustmite: pattern passed to "find" must always use quotes

unreleased Version 0.3.44

  * mago: bring back support to run on Windows XP
  * cv2pdb: fix crashes with very long symbols
  * can now read and write Mono-D project files (but likely to be incomplete because this was 
    a failed attempt to integrate with msbuild and the VC projects)
  * now builds with dmd 2.071
  * when linking with MS linker, options for the map file broke the command line
  * bugzilla 16063: missing option -L/DLL when linking a DLL with MS linker
  * added integration with msbuild and VC++ projects
  * added installation of mago expression evalutro to Concord debug engine
  * added $(Platform) as a settings macro replacement in addition to $(PlatformName)
  * changed default output directory to $(PlatformName)/$(ConfigurationName)
  * added x64 configurations to project templates