@@ -1,0 +1,96 @@
+<DProject>
+  <ProjectGuid>$guid1$</ProjectGuid>
+  <Config name="Debug DMD" platform="Win32">
+	<isX86_64>0</isX86_64>
+	<compiler>0</compiler>
+	<runCv2pdb>1</runCv2pdb>
+	<symdebug>1</symdebug>
+	<release>0</release>
+  </Config>
+  <Config name="Release DMD" platform="Win32">
+	<isX86_64>0</isX86_64>
+	<compiler>0</compiler>
+	<runCv2pdb>0</runCv2pdb>
+	<release>1</release>
+	<optimize>1</optimize>
+	<useInline>1</useInline>
+  </Config>
+  <Config name="Debug DMD" platform="x64">
+	<isX86_64>1</isX86_64>
+	<compiler>0</compiler>
+	<runCv2pdb>1</runCv2pdb>
+	<symdebug>1</symdebug>
+	<release>0</release>
+  </Config>
+  <Config name="Release DMD" platform="x64">
+	<isX86_64>1</isX86_64>
+	<compiler>0</compiler>
+	<runCv2pdb>0</runCv2pdb>
+	<release>1</release>
+	<optimize>1</optimize>
+	<useInline>1</useInline>
+  </Config>
+  <Config name="Debug LDC" platform="Win32">
+	<isX86_64>0</isX86_64>
+	<compiler>2</compiler>
+	<runCv2pdb>1</runCv2pdb>
+	<symdebug>1</symdebug>
+	<release>0</release>
+  </Config>
+  <Config name="Release LDC" platform="Win32">
+	<isX86_64>0</isX86_64>
+	<compiler>2</compiler>
+	<runCv2pdb>0</runCv2pdb>
+	<release>1</release>
+	<optimize>1</optimize>
+	<useInline>1</useInline>
+  </Config>
+  <Config name="Debug LDC" platform="x64">
+	<isX86_64>1</isX86_64>
+	<compiler>2</compiler>
+	<runCv2pdb>1</runCv2pdb>
+	<symdebug>1</symdebug>
+	<release>0</release>
+  </Config>
+  <Config name="Release LDC" platform="x64">
+	<isX86_64>1</isX86_64>
+	<compiler>2</compiler>
+	<runCv2pdb>0</runCv2pdb>
+	<release>1</release>
+	<optimize>1</optimize>
+	<useInline>1</useInline>
+  </Config>
+  <Config name="Debug GDC" platform="Win32">
+	<isX86_64>0</isX86_64>
+	<compiler>1</compiler>
+	<runCv2pdb>1</runCv2pdb>
+	<symdebug>1</symdebug>
+	<release>0</release>
+  </Config>
+  <Config name="Release GDC" platform="Win32">
+	<isX86_64>0</isX86_64>
+	<compiler>1</compiler>
+	<runCv2pdb>0</runCv2pdb>
+	<release>1</release>
+	<optimize>1</optimize>
+	<useInline>1</useInline>
+  </Config>
+  <Config name="Debug GDC" platform="x64">
+	<isX86_64>1</isX86_64>
+	<compiler>1</compiler>
+	<runCv2pdb>1</runCv2pdb>
+	<symdebug>1</symdebug>
+	<release>0</release>
+  </Config>
+  <Config name="Release GDC" platform="x64">
+	<isX86_64>1</isX86_64>
+	<compiler>1</compiler>
+	<runCv2pdb>0</runCv2pdb>
+	<release>1</release>
+	<optimize>1</optimize>
+	<useInline>1</useInline>
+  </Config>
+  <Folder name="$safeprojectname$">
+    <File path="main.d"></File>
+  </Folder>
+</DProject>
