@@ -1,0 +1,7 @@
+import std.stdio;
+
+int main(string[] argv)
+{
+    writeln("Hello D-World!");
+    return 0;
+}
